--- a/src/assets/media.css
+++ b/src/assets/media.css
@@ -1,28 +1,76 @@
-@media screen and (max-width:576px){
-	body{
-		background:deeppink;
+@media screen and (max-width:550px){
+	.header-wrapper{
+		margin: 0 20px;
+        height: 80px;
+		padding-top: 30px;
+        border-bottom: 1px solid #E0E0E0;
+        position: relative;
+	}
+	.logoText,.banner{
+		display: none !important;	
 	}
 }
-@media screen and (min-width:576px) and (max-width:768px){
-	body{
-		background:palegreen;
+@media screen and (max-width:684px) and (min-width:550px){
+	.header-wrapper{
+		margin: 0 20px;
+		height: 80px;
+        padding-top: 30px;
+        border-bottom: 1px solid #E0E0E0;
+        position: relative;
+	}
+	.logoText{
+		display: none;
+	}
+}
+@media screen and (min-width:684px) and (max-width:768px){
+	.header-wrapper{
+		margin-left:80px;
+		margin-right:80px;
+        height: 80px;
+       
+        padding-top: 30px;
+        border-bottom: 1px solid #E0E0E0;
+        position: relative;
+	}
+	.logoText{
+		
+		display: none;
 	}
 }
 @media screen  and (min-width:768px) and (max-width:992px){
-	body{
-		background:blue;
+	.header-wrapper{
+		margin-left:80px;
+		margin-right:80px;
+        height: 80px;
+       
+        padding-top: 30px;
+        border-bottom: 1px solid #E0E0E0;
+        position: relative;
+	}
+	.logoText{
+		display: none;
 	}
 }
 @media screen and (min-width:992px) and (max-width:1200px){
-	body{
-		background:yellow;
+	.header-wrapper{
+		margin-left:80px;
+		margin-right:80px;
+        height: 80px;
+       
+        padding-top: 30px;
+        border-bottom: 1px solid #E0E0E0;
+        position: relative;
 	}
+	.logoText{
+		display: none;
+	}
+	
 }
 @media screen and (min-width:1200px){
     .header-wrapper{
-        width: 1140px;
+        width: 1200px;
         height: 80px;
-        margin:0 auto;
+       margin:0 auto;
         padding-top: 30px;
         border-bottom: 1px solid #E0E0E0;
         position: relative;
